[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"
default-run = "fibonacci"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
#ziskos = { git = "ssh://git@github.com/0xPolygonHermez/zisk.git" }
ziskos = { path = "../zisk/ziskos/entrypoint" }
